# scan2mesh

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.claude/commands/: setup-project.md
config/: default.yaml
config/presets/: canonical.yaml
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gui  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  gui-docker-setup.md  product-requirements.md  repository-structure.md
docs-gui/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs-gui/ideas/: initial-requirements.md
docs/ideas/: initial-requirements.md
src/scan2mesh/: __init__.py  __main__.py  exceptions.py
src/scan2mesh/cli/: __init__.py  commands.py  display.py  validators.py
src/scan2mesh/gates/: __init__.py  asset.py  capture.py  preprocess.py  reconstruct.py  thresholds.py
src/scan2mesh/models/: __init__.py  asset.py  capture.py  config.py  manifest.py  package.py  preprocess.py  reconstruct.py  report.py
src/scan2mesh/orchestrator/: __init__.py  pipeline.py  recovery.py
src/scan2mesh/services/: __init__.py  camera.py  image.py  storage.py
src/scan2mesh/stages/: __init__.py  capture.py  init.py  optimize.py  package.py  plan.py  preprocess.py  reconstruct.py  report.py
src/scan2mesh/utils/: __init__.py  file.py  hash.py  logging.py
src/scan2mesh_gui/: __init__.py  config.py  main.py
src/scan2mesh_gui/components/: __init__.py  camera_preview.py  metrics_display.py  sidebar.py  viewer_3d.py
src/scan2mesh_gui/data/: __init__.py  storage.py
src/scan2mesh_gui/models/: __init__.py  capture_plan.py  capture_session.py  config.py  device.py  optimize_session.py  package_session.py  preprocess_session.py  profile.py  reconstruct_session.py  report_session.py  scan_object.py
src/scan2mesh_gui/pages/: __init__.py  capture.py  capture_plan.py  dashboard.py  devices.py  optimize.py  package.py  preprocess.py  profiles.py  reconstruct.py  registry.py  report.py  settings.py
src/scan2mesh_gui/services/: __init__.py  capture_plan_service.py  capture_service.py  device_service.py  object_service.py  optimize_service.py  package_service.py  pipeline_service.py  preprocess_service.py  profile_service.py  reconstruct_service.py  report_service.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/gates/: __init__.py  test_asset.py  test_capture.py  test_preprocess.py  test_reconstruct.py
tests/unit/models/: __init__.py  test_config.py  test_preprocess.py  test_report.py
tests/unit/services/: __init__.py  test_camera.py  test_image.py  test_storage.py
tests/unit/stages/: __init__.py  test_capture.py  test_init.py  test_optimize.py  test_package.py  test_plan.py  test_preprocess.py  test_reconstruct.py  test_report.py
tests/unit/utils/: __init__.py  test_file.py  test_hash.py
