[project]
name = "scan2mesh"
version = "0.1.0"
description = "RealSense RGBD to 3D asset pipeline - Generate simulation-ready 3D assets from RealSense camera captures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "scan2mesh contributors" }]
keywords = ["3d-scanning", "realsense", "rgbd", "mesh", "simulation", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "types-PyYAML>=6.0.0",
]
full = [
    "pyrealsense2>=2.55.0",
    "open3d>=0.18.0",
    "opencv-python>=4.9.0",
    "trimesh>=4.4.0",
    "pymeshlab>=2023.12.0",
    "pygltflib>=1.16.0",
]
gui = [
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    "pyvista>=0.42.0",
    "stpyvista>=0.0.5",
    "pillow>=10.0.0",
    "streamlit-extras>=0.3.0",
]

[project.scripts]
scan2mesh = "scan2mesh.cli:app"

[project.urls]
Homepage = "https://github.com/scan2mesh/scan2mesh"
Documentation = "https://github.com/scan2mesh/scan2mesh#readme"
Repository = "https://github.com/scan2mesh/scan2mesh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan2mesh", "src/scan2mesh_gui"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyrealsense2.*", "open3d.*", "cv2.*", "trimesh.*", "pymeshlab.*", "pygltflib.*", "streamlit.*", "plotly.*", "pyvista.*", "stpyvista.*", "streamlit_extras.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/scan2mesh --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/scan2mesh"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
